--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
     "npm-scripts-info": "^0.3.9",
+    "sass": "^1.70.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
