--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "?run:ios:livereload": "Run the app on an iOS device/simulator with live reload functionality."
   },
   "dependencies": {
-    "@capacitor-community/camera-preview": "file:../capacitor-community/camera-preview",
+    "@capacitor-community/camera-preview": "github:dpa99c/capacitor-camera-preview",
     "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.0",
