(android) update to Gradle 8.5

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "?lint": "Lint the web layer code.\nFor more options: https://cli.vuejs.org/core-plugins/eslint.html",
     "cap:build": "ionic cap copy",
     "?cap:build": "Build and deploys the web application to the native platform projects.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-build",
-    "cap:build:android": "ionic cap copy android",
+    "cap:build:android": "set NODE_ENV=development && export NODE_ENV=development && ionic cap copy android",
     "?cap:build:android": "Build and deploys the web application to the native Android platform project.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-build",
-    "cap:build:ios": "ionic cap copy ios",
+    "cap:build:ios": "set NODE_ENV=development && export NODE_ENV=development && ionic cap copy ios",
     "?cap:build:ios": "Build and deploys the web application to the native iOS platform project.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-build",
     "cap:update": "ionic cap update",
     "?cap:update": "Update native platforms and dependencies with any pending plugin changes.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-update",
